<resources>
    <string name="app_name">Lifegen</string>
    <string name="add_player">Adicionar Jogador</string>
    <string name="no_battle_players">Sem jogadores em batalha</string>
    <string name="add_player_form_title">Formulário pra adicionar o jogador</string>
    <string name="name">Nome</string>
    <string name="current_max_hp">Vida máxima</string>
    <string name="add">Adicionar</string>
    <string name="add_player_npc">Adicionar Jogador / NPC</string>
    <string name="fill_all_fields">Preencha todos os campos</string>
    <string name="error_to_add_player">Erro ao adicionar jogador</string>
    <string name="player_name">Nome do jogador</string>
    <string name="temp_life">150</string>
    <string name="end_battle_confirmation">Quer encerrar a batalha?</string>
    <string name="end_battle">Encerrar batalha</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="battle_over">Batalha encerrada!</string>

    <!-- Novas Strings para Dano/Cura -->
    <string name="heal">Curar</string>
    <string name="damage">Dano</string>
    <string name="enter_heal_amount">Digite a quantidade de cura</string>
    <string name="enter_damage_amount">Digite a quantidade de dano</string>
    <string name="amount">Quanto altera</string>
    <string name="apply">Aplicar</string>
    <string name="added_player">Jogador adicionado!</string>
    <string name="please_enter_a_value">Por favor, insira um valor</string>

    <!-- Novas Strings para Edição -->
    <string name="edit">Editar</string>
    <string name="edit_player">Editar Jogador</string>
    <string name="max_hp">Vida Máxima</string>
    <string name="delete_player">Excluir Jogador</string>
</resources>