<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Name -->
    <EditText
        android:id="@+id/etDialogName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_marginBottom="12dp" />

    <!-- Max HP -->
    <EditText
        android:id="@+id/etDialogMaxHp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_max_hp"
        android:inputType="number"
        android:layout_marginBottom="20dp" />

    <!-- Add Button -->
    <Button
        android:id="@+id/btnDialogAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>
