<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Título -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textSize="26sp"
        android:textStyle="bold" />

    <!-- Contêiner dos botões na parte inferior -->
    <LinearLayout
        android:id="@+id/bottom_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnEndBattle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_battle"
            android:visibility="gone" 
            tools:visibility="visible"/>
        
        <Button
            android:id="@+id/btnAddPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_player" />

    </LinearLayout>

    <!-- Container Principal com a lista e o texto de "sem jogadores" -->
    <FrameLayout
        android:id="@+id/containerInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtTitle"
        android:layout_above="@id/bottom_button_container">

        <!-- A lista de jogadores -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPlayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_player" />

        <!-- Mensagem exibida quando a lista está vazia -->
        <TextView
            android:id="@+id/txtNoBattlePlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_battle_players"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:visibility="gone" />

    </FrameLayout>

</RelativeLayout>
